Added initial includes and layouts

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Your awesome title
+subtitle: Your awesome subtitle
 email: your-email@domain.com
+name: Your name
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -23,12 +25,20 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+google_analytics: your-google-analytics
+disqus:
+  shortname: your-disqus-shortname
 
 # Build settings
 markdown: kramdown
-theme: minima
 gems:
   - jekyll-feed
 exclude:
   - Gemfile
   - Gemfile.lock
+  - node_modules
+  - LICENSE.txt
+  - package.json
+  - README.md
+  - gulpfile.bable.js
+  - vendor
